libs/@local/hashql/hir/tests/ui/lower/checking/if-non-boolean.jsonc
//@ run: fail
//@ description: If the test condition is not a boolean, the program should fail.
[
  "if",
  { "#literal": 2 },
  //~^ ERROR expected `Boolean`, found `Integer`
  { "#literal": 3 },
  { "#literal": 4 }
]
